--- a/microblog/app/templates/login.html
+++ b/microblog/app/templates/login.html
@@ -1,23 +1,30 @@
 {% extends "base.html" %} {% block content %}
-<h1>登入</h1>
-<form action="" method="post" novalidate>
-  {{form.hidden_tag() }}
+<h1>Register</h1>
+<form action="" method="post">
+  <!-- CSRF Token -->
+  <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
+
   <p>
-    {{form.username.label}}<br />
-    {{form.username(size=32) }}<br />
-    {% for error in form.username.errors %}
-    <span style="color: red">[{{ error }}]</span>
-    {% endfor %}
+    <label for="username">Username:</label><br />
+    <input type="text" id="username" name="username" size="32" required /><br />
+    {% if username_error %}
+    <span style="color: red">[{{ username_error }}]</span>
+    {% endif %}
+  </p>
+
+  <p>
+    <label for="password"
+      >Password:<input type="password" name="password"
+    /></label>
+    <br />
+    {% if password_error %}
+    <span style="color: red">[{{ password_error }}]</span>
+    {% endif %}
   </p>
   <p>
-    {{form.password.label}}<br />
-    {{form.password(size=32) }}<br />
-    {% for error in form.password.errors %}
-    <span style="color: red">[{{ error }}]</span>
-    {% endfor %}
+    <input type="submit" value="Loin In" />
   </p>
-  <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
-  <p>{{ form.submit() }}</p>
 </form>
+
 <p>新使用者？ <a href="{{ url_for('register') }}"> 點擊註冊！</a></p>
 {% endblock %}
